--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.19",
     "passport": "^0.4.0",
