--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.19",
+    "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sequelize": "^5.3.3"
   }
 }
